--- a/src/linktreeofcoachiwan.mdx
+++ b/src/linktreeofcoachiwan.mdx
@@ -17,7 +17,7 @@ enhrefurl: "https://iwankoenderman.com/linktreevancoachiwankoenderman"
 
 
 
-<Link to="../en" className="button-cta">Go coach website</Link>
+<Link to="../" className="button-cta">Go coach website</Link>
 
 ## The LinkedIn profile of Coach Iwan Koenderman   
 
