gatsby  linktree, aanbod, tiktok
aanpassen linktree, aanbod en tiktok

--- a/src/linktreeofcoachiwan.mdx
+++ b/src/linktreeofcoachiwan.mdx
@@ -10,43 +10,48 @@ nlhrefurl: "https://iwankoenderman.com/linktreevancoachiwankoenderman"
 enhrefurl: "https://iwankoenderman.com/linktreevancoachiwankoenderman"
 ---
 
-<Link to="https://iwankoenderman.com/linktreevancoachiwankoenderman" className="button-cta">Switch ➜ Dutch</Link>
+<Link to="https://iwankoenderman.com/linktreevancoachiwankoenderman" className="button-cta-linktree">Switch ➜ Dutch&nbsp;&nbsp;&nbsp;&nbsp;</Link>
 
 
-## The professional website of coach Iwan Koenderman
-
-
-
-<Link to="../" className="button-cta">Go coach website</Link>
-
-## The LinkedIn profile of Coach Iwan Koenderman   
+<br />  
 
 
 
-<a href="https://www.linkedin.com/in/iwan-koenderman-623b7133/" className="button-cta" target="_blank" rel="noopener noreferrer" aria-label="Go Iwan's LinkedIn"> Go Iwan's LinkedIn</a>
+<Link to="../" className="button-cta-linktree">website coach&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</Link>
 
-## Personal Facebook profile of coach Iwan Koenderman
-
-
-
-<a href="https://www.facebook.com/iwan.koenderman/" className="button-cta" target="_blank" rel="noopener noreferrer" aria-label="Go Iwan's Facebook"> Go Iwan's Facebook</a>
-
-## Facebook groep of coach Iwan Koenderman (Dutch)
+<br />  
 
 
 
-<a href="https://www.facebook.com/groups/groeionline/" className="button-cta" target="_blank" rel="noopener noreferrer" aria-label="Go  Facebook groep"> Go Facebook group</a>
+<a href="https://www.linkedin.com/in/iwan-koenderman-623b7133/" className="button-cta-linktree" target="_blank" rel="noopener noreferrer" aria-label="Go Iwan's LinkedIn"> Iwan's LinkedIn&nbsp;&nbsp;&nbsp;&nbsp;</a>
 
-## Instagram of coach Iwan
-
-
-
-<a href="https://www.instagram.com/iwan_koenderman/" className="button-cta" target="_blank" rel="noopener noreferrer" aria-label="Go Iwan´s Instagram"> Go Iwan´s Instagram</a>
-
-## Instagram of photographer Iwan
+<br />  
 
 
-<a href="https://www.instagram.com/iwansfoto/" className="button-cta" target="_blank" rel="noopener noreferrer" aria-label="Go Instagram photos" > Go Instagram photos</a>
+
+<a href="https://www.facebook.com/iwan.koenderman/" className="button-cta-linktree" target="_blank" rel="noopener noreferrer" aria-label="Go Iwan's Facebook"> Iwan's Facebook&nbsp;&nbsp;&nbsp;</a>
+
+<br />  
 
 
-Online Coach | work on more clients by making social media work for you!
+
+<a href="https://www.facebook.com/groups/groeionline/" className="button-cta-linktree" target="_blank" rel="noopener noreferrer" aria-label="Go  Facebook groep"> Facebook group&nbsp;&nbsp;&nbsp;&nbsp;</a>
+
+<br />  
+
+
+
+<a href="https://www.instagram.com/iwan_koenderman/" className="button-cta-linktree" target="_blank" rel="noopener noreferrer" aria-label="Go Iwan´s Instagram"> Iwan´s Instagram</a>
+
+<br />  
+
+
+<a href="https://www.instagram.com/iwansfoto/" className="button-cta-linktree" target="_blank" rel="noopener noreferrer" aria-label="Go Instagram photos" > Instagram photos</a>
+
+<br />  
+
+
+<a href="https://www.tiktok.com/@iwankoenderman?lang=nl-NL" className="button-cta-linktree" target="_blank" rel="noopener noreferrer" aria-label="Go Iwan´s TikTok">Iwan´s TikTok&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
+
+<br />  
+#### Online Coach | work on more clients by making social media work for you!
