--- a/src/linktreevancoachiwan.mdx
+++ b/src/linktreevancoachiwan.mdx
@@ -10,41 +10,38 @@ nlhrefurl: "https://iwankoenderman.com/linktreevancoachiwankoenderman"
 enhrefurl: "https://iwankoenderman.com/linktreevancoachiwankoenderman"
 ---
 
-<Link to="../en/linktreefromcoachiwankoenderman" className="button-cta">Switch ➜ Engels</Link>
-
-## De professionele website van coach Iwan Koenderman
-
-
-
-<Link to="../" className="button-cta">Ga coach website</Link>
-
-
-## De LinkedIn pagina van Coach Iwan Koenderman      
+<Link to="../en/linktreefromcoachiwankoenderman" className="button-cta-linktree">Switch ➜ Engels&nbsp;&nbsp;&nbsp;&nbsp;</Link>
+<br />
 
 
 
-<a href="https://www.linkedin.com/in/iwan-koenderman-623b7133/" className="button-cta" target="_blank" rel="noopener noreferrer" aria-label="Ga Iwan's LinkedIn">Ga Iwan's LinkedIn</a>
-
-## De persoonlijke Facebookprofiel van coach Iwan Koenderman
+<Link to="../" className="button-cta-linktree">website  coach&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</Link>
 
 
+<br />    
 
-<a href="https://www.facebook.com/iwan.koenderman/" className="button-cta" target="_blank" rel="noopener noreferrer" aria-label="Ga Iwan's Facebook"> Ga Iwan's Facebook</a>
+<a href="https://www.linkedin.com/in/iwan-koenderman-623b7133/" className="button-cta-linktree" target="_blank" rel="noopener noreferrer" aria-label="Ga Iwan's LinkedIn">Iwan's LinkedIn&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
 
-## De Facebookgroep van coach Iwan Koenderman
+<br />  
 
+<a href="https://www.facebook.com/iwan.koenderman/" className="button-cta-linktree" target="_blank" rel="noopener noreferrer" aria-label="Ga Iwan's Facebook">Iwan's Facebook&nbsp;&nbsp;&nbsp;&nbsp;</a>
 
-<a href="https://www.facebook.com/groups/groeionline/" className="button-cta" target="_blank" rel="noopener noreferrer" aria-label="Ga Facebook groep">Ga Facebook groep</a>
-
-## De Instagram van coach Iwan
-
-
-<a href="https://www.instagram.com/iwan_koenderman/" className="button-cta" target="_blank" rel="noopener noreferrer" aria-label="Ga Iwan´s Instagram"> Ga Iwan´s Instagram</a>
-
-## De Instagram van fotograaf Iwan
+<br />  
 
 
+<a href="https://www.facebook.com/groups/groeionline/" className="button-cta-linktree" target="_blank" rel="noopener noreferrer" aria-label="Ga Facebook groep">Facebookgroep&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
 
-<a href="https://www.instagram.com/iwansfoto/" className="button-cta" target="_blank" rel="noopener noreferrer" aria-label="Ga Instagram met foto´s">Ga Instagram foto´s</a>
+<br />  
 
-Online Coach | werk aan meer klanten door social media voor je te laten werken!
+
+<a href="https://www.instagram.com/iwan_koenderman/" className="button-cta-linktree" target="_blank" rel="noopener noreferrer" aria-label="Ga Iwan´s Instagram">Iwan´s Instagram&nbsp; </a>
+
+<br />  
+<a href="https://www.instagram.com/iwansfoto/" className="button-cta-linktree" target="_blank" rel="noopener noreferrer" aria-label="Ga Instagram photos" > Instagram foto`s&nbsp;&nbsp;&nbsp;</a>
+
+<br />  
+
+<a href="https://www.tiktok.com/@iwankoenderman?lang=nl-NL" className="button-cta-linktree" target="_blank" rel="noopener noreferrer" aria-label="Ga TikTok">Iwan´s TikTok&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
+
+<br />  
+#### Online Coach | werk aan meer klanten door social media voor je te laten werken!
