update mdx linktres
Aanpassen heading hierarchie

--- a/src/linktreevancoachiwan.mdx
+++ b/src/linktreevancoachiwan.mdx
@@ -44,4 +44,5 @@ enhrefurl: "https://iwankoenderman.com/linktreevancoachiwankoenderman"
 <a href="https://www.tiktok.com/@iwankoenderman?lang=nl-NL" className="button-cta-linktree" target="_blank" rel="noopener noreferrer" aria-label="Ga TikTok">Iwan´s TikTok&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
 
 <br />  
-#### Online Coach | werk aan meer klanten door social media voor je te laten werken!
+<br />
+<b>Online Coach | werk aan meer klanten door social media voor je te laten werken!</b>
