--- a/src/linktreeofcoachiwan.mdx
+++ b/src/linktreeofcoachiwan.mdx
@@ -53,5 +53,6 @@ enhrefurl: "https://iwankoenderman.com/linktreevancoachiwankoenderman"
 
 <a href="https://www.tiktok.com/@iwankoenderman?lang=nl-NL" className="button-cta-linktree" target="_blank" rel="noopener noreferrer" aria-label="Go Iwan´s TikTok">Iwan´s TikTok&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
 
-<br />  
-#### Online Coach | work on more clients by making social media work for you!
+<br /> 
+<br /> 
+<b> Online Coach | work on more clients by making social media work for you! </b>
