foutjes herstel mdx

--- a/src/bedanktkeuzegavanstart.mdx
+++ b/src/bedanktkeuzegavanstart.mdx
@@ -5,7 +5,7 @@ date: "2024-03-25"
 lang: "nl"
 description: "Deze pagina krijgt iedereen te zien als ze het Ga van start pakket aanschaffen"
 slug: "bedanktkeuzegavanstart"
-nlhrefurl: "https://iwankoenderman.com/bedankkeuzegavanstart
+nlhrefurl: "https://iwankoenderman.com/bedankkeuzegavanstart"
 enhrefurl: "https://iwankoenderman.com/en/thanksebook"
 --- 
 
