--- a/src/cancelpage.mdx
+++ b/src/cancelpage.mdx
@@ -4,7 +4,7 @@ title: "A page that displays when there's an issue with payment | coach Iwan Koe
 date: "2024-03-25"
 lang: "en"
 description: "A page that displays when there's an issue with payment"
-slug: "cancelpayment""
+slug: "cancelpayment"
 nlhrefurl: "https://iwankoenderman.com/breekbetalingaf"
 enhrefurl: "https://iwankoenderman.com/en/cancelpayment"
 --- 
