--- a/src/thanksisgettingstartedchoice.mdx
+++ b/src/thanksisgettingstartedchoice.mdx
@@ -5,7 +5,7 @@ date: "2024-03-25"
 lang: "en"
 description: "This page will be shown to everyone when they purchase the is-getting-started package"
 slug: "thanksisgettingstartedchoice"
-nlhrefurl: "https://iwankoenderman.com/bedankkeuzegavanstart
+nlhrefurl: "https://iwankoenderman.com/bedankkeuzegavanstart"
 enhrefurl: "https://iwankoenderman.com/en/thanksisgettingstartedchoice"
 --- 
 
