--- a/src/Bedanktpakket.mdx
+++ b/src/Bedanktpakket.mdx
@@ -18,6 +18,10 @@ We willen graag het momentum houden, toch?
 
 Plan daarom je zoomsessie binnen 3 maanden na je betaling
 
+Je wordt nu weer naar de hoofdpagina geleid, 
+
+waar je de mogelijkheid hebt om jouw zoomsessie te plannen
+
 Mocht je vragen hebben bel, WhatsApp of email me gerust!
 
 <Link to="/" class="button-cta" >Rond betaling af en plan</Link>
