--- a/src/thankspackage.mdx
+++ b/src/thankspackage.mdx
@@ -18,6 +18,10 @@ We want to keep the momentum, right?
 
 Therefore, schedule your Zoom session within 3 months of your payment.
 
+You are now being redirected to the main page, 
+
+where you have the opportunity to schedule your Zoom session.
+
 If you have any questions, feel free to call, WhatsApp, or email me!
 
 <Link to="/" class="button-cta" >Complete payment and plan </Link>
