opnieuw proces singericht

--- a/src/thankspackage.mdx
+++ b/src/thankspackage.mdx
@@ -24,6 +24,6 @@ where you have the opportunity to schedule your Zoom session.
 
 If you have any questions, feel free to call, WhatsApp, or email me!
 
-<Link to="/" class="button-cta" >Complete payment and plan </Link>
+<Link to="/" class="button-cta" >Schedule your first Zoom session!</Link>
 
 ## Thank you for scheduling the Zoom session
