--- a/src/cancelpage.mdx
+++ b/src/cancelpage.mdx
@@ -18,7 +18,7 @@ Or there has been an issue in the payment process.
 
 Please try again, and if you have any questions, feel free to call, WhatsApp, or email me!"
 
-<Link to="/" class="button-cta" >Cancel payment</Link>
+<Link to="/en/" class="button-cta" >Cancel payment</Link>
 
 
 ## Je hebt de betaling afgebroken
