FAQ en structured data

--- a/src/x.mdx
+++ b/src/x.mdx
@@ -24,10 +24,10 @@ De why komt van het model de Golden Circle van Simon Sinek, dat bestaat uit 3 co
 <Ctabutton
                                            Urlnl="https://meetings.hubspot.com/iwan-koenderman"
                                            Urlen="https://meetings.hubspot.com/iwan-koenderman"
-                                           Arlabnl="kPlan zoomafspraak "
-                                           Arlaben="Scedule zoom call"
-                                           ButTxtnl="Plan zoomafspraak"
-                                           ButTxten="Scedule zoom call"/>
+                                           Arlabnl="klik hier voor het maken van een zoomafspraak "
+                                           Arlaben="Download dan mijn e-book hierover"
+                                           ButTxtnl="klik hier voor het maken van een zoomafspraak "
+                                           ButTxten="Then download my e-book about it."/>
 
 
 # 3 Kun je klanten krijgen op social media?
@@ -36,8 +36,8 @@ Jazeker. Dat kan als je jouw marketingboodschap verwoord vanuit je passie, je dr
 <Ctabutton
                                            Urlnl="https://bewustsociaalopweb.hubspotpagebuilder.com/nederlands-tal"
                                            Urlen="https://bewustsociaalopweb.hubspotpagebuilder.com/download-page-ebook-13-ways-to-stay-online-in-touch-iwan-koenderman"
-                                           Arlabnl="Download mijn e-book"
-                                           Arlaben="Download my e-book"
-                                           ButTxtnl="Download mijn e-book"
-                                           ButTxten="Download my e-book"/>  
+                                           Arlabnl="Download dan mijn e-book hierover"
+                                           Arlaben="Download dan mijn e-book hierover"
+                                           ButTxtnl="Then download my e-book about it."
+                                           ButTxten="Then download my e-book about it."/>
  
