--- a/src/Veelgesteldevraagdrie.mdx
+++ b/src/Veelgesteldevraagdrie.mdx
@@ -6,7 +6,7 @@ lang: "nl"
 description: "Veel gestelde vragen over hoe je meer klanten kunt krijgen op social media op de website van coach Iwan Koenderman. Meer weten? Klik!"
 slug: "veelgesteldevragen"
 nlhrefurl: "https://iwankoenderman.com/veelgesteldevragen"
-enhrefurl: "https://iwankoenderman.com/en/Frequentlyaskedquestions"
+enhrefurl: "https://iwankoenderman.com/en/faq"
 faqvraag1: "Kun je klanten krijgen op social media?"
 faqanswer1: "<p>Jazeker. Dat kan als je jouw marketingboodschap verwoord vanuit je passie, je drijfveer, je why, en de waarde die je kunt leveren aan je klant. Daarmee bedoel ik de why van Simon Sinek. Hierdoor onderscheid je je van je concurrenten en ben je authentiek. Dit is goed voor het algoritme van social media. Je bereik gaat hierdoor omhoog. Jouw ideale klanten gaan meer van je zien op social media. Je wordt meer zichtbaar online. Als je vanuit deze boodschap ook content gaat creëren, die authentiek, relevant en sociaal is, in de vorm van posts, bijdragen, video´s, reels, podcasts gaan je klanten je uiteindelijk vertrouwen en als expert zien. Meer weten? <a href=https://bewustsociaalopweb.hubspotpagebuilder.com/nederlands-tal> Download dan mijn e-book hierover</a></p>"
 faqvraag2: "Wat wordt met de why bedoeld?"
