--- a/src/faq.mdx
+++ b/src/faq.mdx
@@ -6,7 +6,7 @@ lang: "en"
 description: "Frequently asked questions about how to acquire more customers on social media on Coach Iwan Koenderman's website. Want to learn more? Click"
 slug: "faq"
 nlhrefurl: "https://iwankoenderman.com/veelgesteldevragen"
-enhrefurl: "https://iwankoenderman.com/en/Frequentlyaskedquestions"
+enhrefurl: "https://iwankoenderman.com/en/faq
 faqvraag1: "Can you acquire clients on social media?"
 faqanswer1: "<p>Absolutely. You can do that if you articulate your marketing message from your passion, your drive, your why, and the value you can deliver to your client. By that, I mean Simon Sinek's why. This sets you apart from your competitors and makes you authentic. This is good for the social media algorithm. Your reach increases as a result. Your ideal clients will see more of you on social media. You become more visible online. If you also create content from this message that is authentic, relevant, and social, in the form of posts, contributions, videos, reels, podcasts, your customers will eventually trust you and see you as an expert. Want to know more? <a href=https://bewustsociaalopweb.hubspotpagebuilder.com/download-page-ebook-13-ways-to-stay-online-in-touch-iwan-koenderman> Then download my e-book about it. </a></p>"
 faqvraag2: "Who is meant by Simon Sinek?"
