herstel links faq/veelgesteldevraag

--- a/src/Veelgesteldevragen.mdx
+++ b/src/Veelgesteldevragen.mdx
@@ -40,4 +40,14 @@ Jazeker. Dat kan als je jouw marketingboodschap verwoord vanuit je passie, je dr
                                            Arlaben="Download my e-book"
                                            ButTxtnl="Download mijn e-book"
                                            ButTxten="Download my e-book"/>  
+
+Als je dit aanspreekt kijk dan even op mijn website.
+
+<Ctabutton
+                                           Urlnl="/"
+                                           Urlen="/en/"
+                                           Arlabnl="Ga naar website"
+                                           Arlaben="Visit website"
+                                           ButTxtnl="Ga naar website"
+                                           ButTxten="Visit website"/>  
  
