--- a/src/faq.mdx
+++ b/src/faq.mdx
@@ -41,11 +41,10 @@ Absolutely. You can do that if you articulate your marketing message from your p
 
 If this resonates with you, please take a look at my website.
 
-                                           <Ctabutton
-                                           Urlnl="https://iwankoenderman.com/"
-                                           Urlen="https:/iwankoenderman.com/en/"
+                        <Ctabutton
+                                           Urlnl="/"
+                                           Urlen="/en/"
                                            Arlabnl="Ga naar website"
                                            Arlaben="Visit website"
                                            ButTxtnl="Ga naar website"
                                            ButTxten="Visit website"/>  
-
