update gatsby en pluginns en fouten eruit
meer unique id in SEO.jsx
externe link verwijderd uit mdx
overal class vervangen voor ClassName
update gatsby en pluginns

--- a/src/Bedanktpakket.mdx
+++ b/src/Bedanktpakket.mdx
@@ -24,6 +24,6 @@ waar je de mogelijkheid hebt om jouw zoomsessie te plannen
 
 Mocht je vragen hebben bel, WhatsApp of email me gerust!
 
-<Link to="/" class="button-cta" >Plan je eerst zoom sessie!</Link>
+<Link to="/" className="button-cta" >Plan je eerst zoom sessie!</Link>
 
 ## Bedankt voor het plannen van de zoomsessie
