--- a/src/cancelpagina.mdx
+++ b/src/cancelpagina.mdx
@@ -19,7 +19,7 @@ Of er is iets mis gegegaan in het betalingsverkeer.
 
 Probeer het nogmaals en mocht je vragen hebben bel, WhatsApp of email me gerust!
 
-<Link to="/" class="button-cta" >Breek betaling af</Link>
+<Link to="/" className="button-cta" >Breek betaling af</Link>
 
 
 ## Je hebt de betaling afgebroken
