--- a/src/linktreeofcoachiwan.mdx
+++ b/src/linktreeofcoachiwan.mdx
@@ -10,7 +10,7 @@ nlhrefurl: "https://iwankoenderman.com/linktreevancoachiwankoenderman"
 enhrefurl: "https://iwankoenderman.com/linktreevancoachiwankoenderman"
 ---
 
-<Link to="https://iwankoenderman.com/linktreevancoachiwankoenderman" className="button-cta-linktree">Switch ➜ Dutch&nbsp;&nbsp;&nbsp;&nbsp;</Link>
+<Link to="../linktreevancoachiwankoenderman" className="button-cta-linktree">Switch ➜ Dutch&nbsp;&nbsp;&nbsp;&nbsp;</Link>
 
 
 <br />  
