--- a/src/privacystatementandcookiepolicy.mdx
+++ b/src/privacystatementandcookiepolicy.mdx
@@ -86,7 +86,20 @@ Tracking cookies are cookies that collect data about the (internet) behavior of 
 This website uses Google Analytics, a web analytics service provided by Google Inc. Iwan Koenderman does this to see how the website is used. Google Analytics provides clear reports on the use of our website. Google Analytics generates information about your use of our website by placing a so-called cookie on your computer. Iwan Koenderman with Google Inc. concluded a processing agreement. The information that Google Analytics collects for us is anonymized as much as possible and is not personally traceable. Iwan Koenderman Google Inc. not given permission to share this information with its own commercial departments or to provide it to third parties, unless Google Inc. required to do so by law or insofar as third parties provide the information on behalf of Google Inc. process. Unfortunately, Iwan Koenderman has no influence on the latter.
 
 ## FacebookPixel
-This website uses Facebook Pixel, a web analytics service from Meta Inc. Iwan Koenderman does this to see how the website is used. Facebook Pixel provides clear reports about the use of our website. Facebook Pixel generates information about your use of our website by placing a so-called cookie on your computer. Iwan Koenderman and Facebook Inc. concluded a processing agreement. The information that Facebook Inc. collects for us is anonymized as much as possible and is not personally traceable. Iwan Koenderman has Facebook Inc. not authorized to share this information with its own commercial departments or provide it to third parties, unless Facebook Inc. is required to do so by law or to the extent that third parties process the information on behalf of Facebook Inc. process. Iwan Koenderman unfortunately has no influence on the latter.
+This website uses Facebook Pixel, a web analytics service provided by Meta (formerly Facebook Inc.). Iwan Koenderman uses this service to gain insights into how the website is being used and to improve the user experience. Facebook Pixel generates information about your use of our website by placing a so-called cookie on your computer.
+
+Data Usage: The information collected via Facebook Pixel is used for the following purposes:
+
+Analyzing website usage.
+Improving the user experience on our website.
+Providing personalized advertisements and marketing purposes.
+Reports: The collected data is used to generate clear reports on the usage of our website, helping us to gain better insights into the effectiveness of our marketing efforts and to implement improvements to our website.
+
+Data Processing Agreement: Iwan Koenderman has entered into a data processing agreement with Facebook Inc. The information Facebook Inc. collects on our behalf is anonymized as much as possible and is not personally identifiable. Iwan Koenderman has not given Facebook Inc. permission to share this information with its own commercial departments or to provide it to third parties, unless Facebook Inc. is legally required to do so or if third parties process the information on behalf of Facebook Inc. This is beyond the control of Iwan Koenderman.
+
+Your Rights: You have the right to request access to the personal data we process about you and to have this data corrected or deleted. You also have the right to object to the use of your data and the right to data portability. For more information on how we handle personal data, please refer to our full privacy policy.
+
+Opt-out Instructions: You can opt out of the use of Facebook Pixel and targeted advertising through Facebook’s ad settings. For more information, please refer to the privacy policy of Facebook.
 
 ## LinkedIn Insight Tag
 This website uses Linkedin Insight Tag, a web analytics service from Linkedi. Iwan Koenderman does this to see how the website is used. Facebook Pixel provides clear reports about the use of our website. Facebook Pixel generates information about your use of our website by placing a so-called cookie on your computer. Iwan Koenderman and Facebook Inc. concluded a processing agreement. The information that Facebook Inc. collects for us is anonymized as much as possible and is not personally traceable. Iwan Koenderman has Facebook Inc. not authorized to share this information with its own commercial departments or provide it to third parties, unless Facebook Inc. is required to do so by law or to the extent that third parties process the information on behalf of Facebook Inc. process. Iwan Koenderman unfortunately has no influence on the latter.
